[B]Retrospect v5.7.x - Changelog - 2024-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Older url's would have the incorrect build-version of the UR Play app (Fixes #1827).